<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_grey"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="eu.hulsch.andreas.minesweeper.MainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>


    <eu.hulsch.andreas.gpstracker.GpsGraphCustomView
        android:id="@+id/gps_graph_custom_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp" />

    <TextView
        android:id="@+id/gps_active"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="@dimen/textview_text_size"
        android:text="@string/gps_inactive"/>

    <TextView
        android:id="@+id/current_speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="@dimen/textview_text_size"
        android:text="@string/current_speed"/>

    <TextView
        android:id="@+id/average_speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="@dimen/textview_text_size"
        android:text="@string/average_speed"/>

    <TextView
        android:id="@+id/overall_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="@dimen/textview_text_size"
        android:text="@string/overall_time"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/btn_tracking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_tracking"
            />


    </LinearLayout>
</LinearLayout>